--- a/hw6asa.tex
+++ b/hw6asa.tex
@@ -131,6 +131,10 @@ Since it is constant, its derivative is zero.
 
 \paragraph*{(d)}
 
-A sufficient condition is that $X$ is a $C^{2n}$ process.
+A sufficient condition is that $C$ is a $C^{2n}$ function. Indeed we have shown in homework 5 (exercise 5) that if $C^2$ then $X$ is $C^1$. Applying this reasoning on the derivatives of $X$, one finds that if $C$ is $C^{2n}$ then $X$ is a $C^n$ process. 
+ 
+\section*{Exercise 3}
+
+
  
 \end{document}
