--- a/hw9asa.tex
+++ b/hw9asa.tex
@@ -284,7 +284,7 @@ $$
 
 If $X$, $Y$ are independent then
 \begin{align*}
-C_{W}(t,s) & = \cos kt \, \cos ks \, C_X(t-s)  + \sin kt \, \sin ks \, C_Y(t-s) = \int e^{i\xi (t-s)}\cos k(t-s) \frac{\sigma^2}{\alpha^2+\xi^2}\frac{d\xi}{2\pi}
+C_{W}(t,s) & = \cos kt \, \cos ks \, C_X(t-s)  + \sin kt \, \sin ks \, C_Y(t-s) \\ & = \int e^{i\xi (t-s)}\cos k(t-s) \frac{\sigma^2}{\alpha^2+\xi^2}\frac{d\xi}{2\pi}
 \\ & = \int e^{i\xi (t-s)}(e^{ik(t-s)}+e^{-ik(t-s)}) \frac{\sigma^2}{\alpha^2+\xi^2}\frac{d\xi}{4\pi} \\ & = \int e^{i\xi (t-s)} \frac{\sigma^2}{4\pi}\parq*{\frac{1}{\alpha^2+(\xi-k)^2}+\frac{1}{\alpha^2+(\xi+k)^2}}\,d\xi,
 \end{align*}
 i.e. the spectral density of $W$ is 
