--- a/hw10asa.tex
+++ b/hw10asa.tex
@@ -174,7 +174,7 @@ keepaspectratio]{ex10_em_s.png}
 \end{minipage}
 \caption{ \label{figure:ex10_em} Weak (left) and strong (right) convergence of the Euler-Maruyama method for equation (\ref{eq:conv_num}).}
 \end{figure}
-The empirical values of $\alpha$ (i.e. the order of convergence) are $\alpha = 0.84$ and $\alpha = 0.48$ for weak and strong convergence respectively.
+The empirical values of $\alpha$ (i.e. the order of convergence) found are $\alpha = 0.84$ and $\alpha = 0.48$ for weak and strong convergence respectively.
 
 \paragraph*{(b)}
 
@@ -193,7 +193,7 @@ keepaspectratio]{ex10_mil_s.png}
 \end{minipage}
 \caption{ \label{figure:ex10_mil} Weak (left) and strong (right) convergence of the Euler-Maruyama method for equation (\ref{eq:conv_num}).}
 \end{figure}
-The empirical values of $\alpha$ (i.e. the order of convergence) are $\alpha = 0.95$ and $\alpha = 0.92$ for weak and strong convergence respectively.
+The empirical values of $\alpha$ found are $\alpha = 0.95$ and $\alpha = 0.92$ for weak and strong convergence respectively.
 
 \paragraph*{(c)}
 
